--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <option value="vehicles">Vehicles</option>
         <option value="species">Species</option>
     </select>
-    <input type="number" id="id-input" placeholder="Digite o ID" min="1" />
+    <input type="number" id="id-input" placeholder="ID" min="1" />
     <button id="fetch-button">Buscar</button>
     <pre id="result"></pre>
 
