--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>🌌 Star Wars API Client</h1>
+    <h1 class="star-wars-text">🌌Universo de Star Wars!</h1>
     <div class="container">
         <select id="endpoint">
             <option value="people">People</option>
