--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 class="star-wars-text">🌌Universo de Star Wars!</h1>
+    <h1 class="star-wars-text">🌌Api Universo Star Wars</h1>
     <div class="container">
+
         <select id="endpoint">
             <option value="people">People</option>
             <option value="planets">Planets</option>
@@ -19,6 +20,17 @@
         <input type="number" id="id-input" placeholder="ID" min="1" />
     </div>
     <button id="fetch-button">Buscar</button>
+
+    
+
+  <!-- Botões para mudar a imagem de fundo -->
+    <div class="button-container">
+        <button id="prevBtn">PREV</button>
+        <button id="nextBtn">NEXT</button>
+    </div>
+
+
+
     <pre id="result" class="hidden"></pre>
     <script src="script.js"></script>
 </body>
