--- a/index.html
+++ b/index.html
@@ -21,15 +21,10 @@
     </div>
     <button id="fetch-button">Buscar</button>
 
-    
-
-  <!-- Botões para mudar a imagem de fundo -->
     <div class="button-container">
-        <button id="prevBtn">PREV</button>
-        <button id="nextBtn">NEXT</button>
+        <button id="prevBtn">Prev</button>
+        <button id="nextBtn">Next</button>
     </div>
-
-
 
     <pre id="result" class="hidden"></pre>
     <script src="script.js"></script>
